salesforce/force-app/main/default/objects/Case/fields/Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Date__c</fullName>
    <description>Business reported timestamp for the customer issue.</description>
    <label>Reported Date</label>
    <type>DateTime</type>
</CustomField>