salesforce/force-app/main/default/objects/Case/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>Business resolved timestamp for the customer issue.</description>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>