salesforce/force-app/main/default/objects/Case/fields/SLA_Breached__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the support case breached the agreed SLA.</description>
    <label>SLA Breached</label>
    <type>Checkbox</type>
</CustomField>